# ministatus

./: Cargo.toml  LICENSE  deny.toml  shell.nix
.github/workflows/: rust.yml
ministatus/: Cargo.toml
ministatus/src/: main.rs  shared.rs
ministatus/src/block/: battery.rs  clock.rs  internet.rs  mailbox.rs  mod.rs  news.rs  pulse.rs  volume.rs  weather.rs
refreshbar/: Cargo.toml
refreshbar/src/: main.rs
src/: main.rs  shared.rs  xorg.rs
src/block/: battery.rs  clock.rs  internet.rs  mailbox.rs  mod.rs  news.rs  pulse.rs  weather.rs
