[package]
name = "ministatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "signal", "time", "process"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3.28"
anyhow = "1.0.75"
