[package]
name = "ministatus"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
x11 = { version = "2.21", default-features = false, features = ["xlib"] }

# mailbox
glob = "0.3"

# news
rusqlite = "0.31"

# weather
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
native-tls = "0.2"

# pulse
libpulse-binding = "2"
