[package]
name = "ministatus"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
x11 = { version = "2.21", default-features = false, features = ["xlib"] }

# mailbox
glob = "0.3"

# news
rusqlite = "0.39"

# weather
ureq = { version = "3.0.0", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.202", features = ["derive"] }

# pulse
libpulse-binding = "2"
