[package]
name = "ministatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "signal", "time", "process"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
x11 = { version = "2.21", default-features = false, features = ["xlib"] }
async-trait = "0.1"

# mailbox
glob = "0.3"

# news
sqlite = "0.31"

# volume
regex = "1"

# weather
reqwest = "0.11"
