[package]
name = "refreshbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = { version = "0.15", default-features = false }
nix = { version = "0.27", default-features = false, features = ["signal"] }
